[tool.poetry]
name = "doc-comments-ai"
version = "0.1.18"
description = ""
authors = ["fynnfluegge <fynnfluegge@gmx.de>"]
readme = "README.md"
packages = [{ include = "doc_comments_ai" }]

[tool.poetry.dependencies]
python = "^3.9"
tree-sitter = "^0.20.1"
python-dotenv = "^1.0.0"
yaspin = "^3.0.0"
inquirer = "^3.1.3"
torch = "^2.2.1"
huggingface-hub = "^0.20.2"

[tool.poetry.scripts]
aicomment = "doc_comments_ai.__main__:main"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
